fix flex aligns in news__block to flex-start

--- a/app/sass/_news.sass
+++ b/app/sass/_news.sass
@@ -35,8 +35,8 @@
       flex-basis: 50%
       display: flex
       flex-direction: column
-      align-items: center
-      justify-content: center
+      align-items: flex-start
+      justify-content: flex-start
 
 @media (max-width: 960px)
   .news
